<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />
    
    <item
        android:id="@+id/myPostsFragment"
        android:icon="@drawable/ic_post"
        android:title="@string/nav_my_posts" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_message"
        android:title="@string/nav_chat" />
    
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/nav_profile" />
</menu>